Ajout watiHotel
